# exambot-assessments

./: README.md  document_loader.py  knowledge.txt  main.py  pyproject.toml
models/: assessment_response_model.py
my_faiss_index/: index.faiss  index.pkl
