[project]
name = "exambot-assessments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-openai>=0.3.16",
    "langsmith>=0.3.42",
    "openai>=1.78.1",
    "tiktoken>=0.9.0",
]
